fix: adjust button sizing and div spacing for mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ body {
 /* main content headings */
 h2,
 h3 {
-    font-size: 1rem;
+    font-size: 0.75rem;
     color: rgb(202, 154, 96);
     text-transform: uppercase;
     text-align: center;
@@ -49,7 +49,7 @@ h3 {
 }
 
 h2 {
-    height: 3.5rem;
+    height: 2rem;
     margin-bottom: 0;
 }
 
@@ -57,19 +57,20 @@ h2 {
 #controls-area {
     border: 2px solid rgb(223, 209, 193);
     border-radius: 10px;
-    height: 4.5rem;
+    height: 9.5rem;
     background-color: #1c4063;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    margin: 0 1rem 1rem;
+    margin: 0 1rem 0.5rem;
 }
 
 .btn {
     background: none;
     border: none;
     font-family: Noto Color Emoji;
-    font-size: 1.6rem;
+    font-size: 3rem;
     padding: 0.3rem 0;
 }
 
@@ -77,14 +78,16 @@ h2 {
 #results-table {
     background-color: #0d2033;
     color: rgb(202, 154, 96);
-    height: 6rem;
+    height: 5.5rem;
     display: flex;
     justify-content: space-evenly;
+    margin: 0.25rem;
 }
 
 .table {
     font-size: 0.7rem;
     text-align: center;
+    padding: 0.25rem;
 }
 
 .table th {
@@ -111,10 +114,10 @@ h2 {
     align-items: center;
     text-align: center;
     color: rgb(202, 154, 96);
-    height: 6rem;
-    font-size: 1.3rem;
-    margin: 0 auto 1rem;
-    padding: 0 1rem 1rem;
+    height: 4rem;
+    font-size: 1.25rem;
+    margin: 0.75rem auto;
+    padding: 1rem;
 }
 
 /* tally area */
